--- a/index.html
+++ b/index.html
@@ -55,13 +55,24 @@
           </div>
         </div>
         <div class="btn-box">
-          <a href="#" class="btn">Download CV</a>
-          <a href="#" class="btn">Hire Me Now!</a>
+          <a
+            href="https://drive.google.com/file/d/1izWzKMm7zAL10gRogtLbrRvmnAYNbLUN/view?usp=sharing"
+            class="btn"
+            >Download CV</a
+          >
+          <a href="#0763468292" class="btn">Hire Me Now!</a>
         </div>
         <div class="social-icons">
-          <a href="#"><i class="bx bxl-linkedin-square"></i></a>
-          <a href="#"><i class="bx bxl-facebook"></i></a>
-          <a href="#"><i class="bx bxl-github"></i></a>
+          <a href="https://www.linkedin.com/in/udeshika-prabhashini-459827345/"
+            ><i class="bx bxl-linkedin-square"></i
+          ></a>
+          <a href=""><i class="bx bxl-facebook"></i></a>
+          <a href="https://medium.com/@udeshika22721"
+            ><i class="bx bxl-medium-square"></i
+          ></a>
+          <a href="https://github.com/udeshika123-cyber/"
+            ><i class="bx bxl-github"></i
+          ></a>
         </div>
       </div>
       <div class="home-image scroll-scale">
@@ -165,13 +176,32 @@
         <h2>About Me</h2>
         <h3>A story of good</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat quasi
-          temporibus voluptates recusandae debitis, eum qui consequuntur
-          consectetur reprehenderit molestiae necessitatibus? Iusto unde qui
-          obcaecati accusamus error non voluptatem atque!
+          Hi! I'm Udeshika Prabhashani, a passionate Frontend Developer and
+          aspiring Data Analyst & Software Developer. I love turning ideas into
+          beautiful, functional websites and exploring data to discover
+          meaningful insights. I enjoy working with modern web technologies like
+          HTML, CSS, JavaScript, and React, and I’m also interested in data
+          analysis tools and machine learning.
+
+          <span id="more-text">
+            In addition to design and development, I enjoy data analysis,
+            learning new technologies, and staying up-to-date with UI/UX trends.
+            Outside of tech, I love art, exploring creative ideas, and
+            constantly pushing myself to grow. I believe that technology and
+            creativity together can make a real difference in people’s lives.
+            I’m passionate about turning complex problems into simple, elegant
+            solutions that feel intuitive and inspiring. Whether it’s crafting a
+            user-friendly interface, analyzing data to uncover insights, or
+            collaborating on innovative projects, I always bring curiosity,
+            energy, and a love for learning. I’m also deeply interested in
+            personal growth and believe in lifelong learning — from trying new
+            design tools to exploring new cultures and ideas. Let’s connect and
+            build something amazing together!</span
+          >
         </p>
         <div class="btn-box">
-          <a href="#" class="btn">Read more!</a>
+          <!-- <a href="javascript:void(0)" class="btn">Read more!</a> -->
+          <button class="btn" id="read-more-btn">Read more!</button>
         </div>
       </div>
     </section>
@@ -454,5 +484,21 @@
     </footer>
     <script src="mixitup.min.js"></script>
     <script src="style.js"></script>
+
+    <!-- script for read-more button  =================== -->
+    <script>
+      const readMoreBtn = document.getElementById("read-more-btn");
+      const moreText = document.getElementById("more-text");
+
+      readMoreBtn.addEventListener("click", () => {
+        if (moreText.classList.contains("show")) {
+          moreText.classList.remove("show");
+          readMoreBtn.textContent = "Read more!";
+        } else {
+          moreText.classList.add("show");
+          readMoreBtn.textContent = "Read less!";
+        }
+      });
+    </script>
   </body>
 </html>
