--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
         </div>
 
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta fugit
-          odit optio possimus ea magni laboriosam harum. Rerum necessitatibus
-          voluptatum, temporibus molestiae quos accusamus omnis in odio fuga,
-          corrupti quisquam?
+          Hi! I'm a creative Graphic Designer, Web Developer, and Frontend
+          Developer passionate about turning ideas into beautiful, user-friendly
+          digital experiences. I blend design and code to create modern,
+          responsive websites and impactful visuals. Let’s build something
+          amazing together!
         </p>
         <div class="info-box">
           <div class="email-info">
@@ -66,7 +67,9 @@
           <a href="https://www.linkedin.com/in/udeshika-prabhashini-459827345/"
             ><i class="bx bxl-linkedin-square"></i
           ></a>
-          <a href=""><i class="bx bxl-facebook"></i></a>
+          <a href="https://web.facebook.com/Udeshikaprabhashini21"
+            ><i class="bx bxl-facebook"></i
+          ></a>
           <a href="https://medium.com/@udeshika22721"
             ><i class="bx bxl-medium-square"></i
           ></a>
@@ -218,22 +221,25 @@
           <i class="bx bxs-layer service-icon"></i>
           <h3>Graphic Designer</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
-            veritatis saepe aut est itaque dignissimos, veniam eum ullam libero
-            tempora?
+            Hi ! I'm a creative Graphic Designer passionate about turning ideas
+            into eye-catching visuals. With a strong focus on color, typography,
+            and composition, I strive to create designs that not only look
+            beautiful but also communicate a clear message.
           </p>
           <div class="btn-box service-btn">
             <a href="#" class="btn">Read More</a>
+            <!-- <button class="btn" id="read-more-btn">Read more</button> -->
           </div>
         </div>
 
         <div class="service-box">
           <i class="bx bx-desktop service-icon"></i>
-          <h3>Graphic Designer</h3>
+          <h3>Frontend Developer</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
-            veritatis saepe aut est itaque dignissimos, veniam eum ullam libero
-            tempora?
+            Hi there! I’m a passionate Frontend Developer who loves crafting
+            beautiful and intuitive user interfaces. With a strong focus on user
+            experience and design aesthetics, I bridge the gap between visual
+            design and technical implementation.
           </p>
           <div class="btn-box service-btn">
             <a href="#" class="btn">Read More</a>
@@ -242,11 +248,12 @@
 
         <div class="service-box">
           <i class="bx bx-code-alt service-icon"></i>
-          <h3>Graphic Designer</h3>
+          <h3>Web Developer</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi
-            veritatis saepe aut est itaque dignissimos, veniam eum ullam libero
-            tempora?
+            Hi ! I'm a dedicated Web Developer who enjoys building fast, secure,
+            and scalable websites. With strong skills in both front-end and
+            back-end development.I specialize in creating responsive that
+            deliver great experiences on any device.
           </p>
           <div class="btn-box service-btn">
             <a href="#" class="btn">Read More</a>
@@ -267,7 +274,7 @@
           <div class="skill-bar">
             <div class="info">
               <p>HTML</p>
-              <p>72%</p>
+              <p>95%</p>
             </div>
             <div class="bar">
               <span class="html"></span>
@@ -276,11 +283,11 @@
 
           <div class="skill-bar">
             <div class="info">
-              <p>FIGMA</p>
+              <p>Java</p>
               <p>90%</p>
             </div>
             <div class="bar">
-              <span class="figma"></span>
+              <span class="java"></span>
             </div>
           </div>
 
@@ -297,7 +304,7 @@
           <div class="skill-bar">
             <div class="info">
               <p>CSS</p>
-              <p>62%</p>
+              <p>85%</p>
             </div>
             <div class="bar">
               <span class="css"></span>
@@ -362,13 +369,16 @@
               <img src="img/unsplash_6sAl6aQ4OWI1.png" alt="" />
             </div>
             <div class="port-content">
-              <h3>Graphic Design</h3>
+              <h3>Web Development</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa
-                commodi iusto ullam porro tenetur itaque maxime voluptas
-                voluptates explicabo adipisci.
+                In my latest web development project, I created Flavorly Food, a
+                modern and user-friendly website for a food brand. The site
+                features a clean, attractive design, smooth animations, and a
+                fully responsive layout that looks great on all devices.
               </p>
-              <a href="#"><i class="bx bx-link-external"></i></a>
+              <a href="http://flavourlyfoods.atwebpages.com/"
+                ><i class="bx bx-link-external"></i
+              ></a>
             </div>
           </div>
 
@@ -377,13 +387,18 @@
               <img src="img/unsplash_6sAl6aQ4OWI.png" alt="" />
             </div>
             <div class="port-content">
-              <h3>Graphic Design</h3>
+              <h3>Mobile Development</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa
-                commodi iusto ullam porro tenetur itaque maxime voluptas
-                voluptates explicabo adipisci.
+                StyleApp is a React Native mobile app with user authentication,
+                a reading list, and light/dark themes. Built with Expo and
+                Appwrite, it offers a smooth, responsive experience for managing
+                books and profiles. This project showcases my skills in mobile
+                development and UI design.
               </p>
-              <a href="#"><i class="bx bx-link-external"></i></a>
+              <a
+                href="https://expo.dev/accounts/prabhashiani22/projects/StyleApp/builds/1cea2a17-7897-44f3-a8b8-1b85446a149f"
+                ><i class="bx bx-link-external"></i
+              ></a>
             </div>
           </div>
 
@@ -392,13 +407,18 @@
               <img src="img/unsplash_8qEB0fTe9Vw.png" alt="" />
             </div>
             <div class="port-content">
-              <h3>Graphic Design</h3>
+              <h3>AI Development</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa
-                commodi iusto ullam porro tenetur itaque maxime voluptas
-                voluptates explicabo adipisci.
+                I developed an AI-powered WhatsApp chatbot using Meta’s API to
+                help businesses automate customer support and engage with users
+                in real time. This chatbot can understand and respond to common
+                queries, handle basic tasks, and provide instant, friendly
+                replies — improving efficiency and user experience.
               </p>
-              <a href="#"><i class="bx bx-link-external"></i></a>
+              <a
+                href="https://www.linkedin.com/posts/udeshika-prabhashini-459827345_whatsappchatbot-metadeveloper-nodejs-activity-7331715972367593472-cxsE?utm_source=share&utm_medium=member_desktop&rcm=ACoAAEjsQGUBtr4dg7oqx0WVE5SIYUfJXDNEaWI"
+                ><i class="bx bx-link-external"></i
+              ></a>
             </div>
           </div>
 
@@ -407,11 +427,12 @@
               <img src="img/unsplash_IKUYGCFmfw4.png" alt="" />
             </div>
             <div class="port-content">
-              <h3>Graphic Design</h3>
+              <h3>UI/UX Designer</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa
-                commodi iusto ullam porro tenetur itaque maxime voluptas
-                voluptates explicabo adipisci.
+                Hello! I'm , a passionate UI/UX designer dedicated to creating
+                seamless and meaningful digital experiences. Through a blend of
+                creativity, user empathy, and technical skills, I craft designs
+                that not only look stunning but also solve real problems.
               </p>
               <a href="#"><i class="bx bx-link-external"></i></a>
             </div>
@@ -486,19 +507,5 @@
     <script src="style.js"></script>
 
     <!-- script for read-more button  =================== -->
-    <script>
-      const readMoreBtn = document.getElementById("read-more-btn");
-      const moreText = document.getElementById("more-text");
-
-      readMoreBtn.addEventListener("click", () => {
-        if (moreText.classList.contains("show")) {
-          moreText.classList.remove("show");
-          readMoreBtn.textContent = "Read more!";
-        } else {
-          moreText.classList.add("show");
-          readMoreBtn.textContent = "Read less!";
-        }
-      });
-    </script>
   </body>
 </html>
