--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- home section----------------------------------------------------------------------- -->
     <section id="home" class="home">
       <div class="home-content scroll-scale">
-        <h1>Hi! I'm Prabhashi U dayananda</h1>
+        <h1>Hi! I'm Prabhashi U Dayananda</h1>
         <div class="change-text">
           <h3>and I'm</h3>
           <h3>
@@ -80,10 +80,7 @@
       </div>
       <div class="home-image scroll-scale">
         <div class="img-box">
-          <img
-            src="img/photo_6307702878189505209_y-removebg-preview.png"
-            alt=""
-          />
+          <img src="img/myImage11.png" alt="" />
         </div>
         <div class="liquid-shape">
           <svg
@@ -160,17 +157,17 @@
     <!-- about section----------------------------------------------------------------------- -->
     <section id="about" class="about">
       <div class="img-about scroll-scale">
-        <img src="img/about.JPG" alt="" />
+        <img src="img/myImage11.png" alt="" />
         <div class="info-about1">
-          <span>10+</span>
+          <span>1+</span>
           <p>Years experinces</p>
         </div>
         <div class="info-about2">
-          <span>150+</span>
+          <span>20+</span>
           <p>projects completed</p>
         </div>
         <div class="info-about3">
-          <span>200+</span>
+          <span>100+</span>
           <p>Happy clients</p>
         </div>
       </div>
@@ -369,16 +366,14 @@
               <img src="img/unsplash_6sAl6aQ4OWI1.png" alt="" />
             </div>
             <div class="port-content">
-              <h3>Web Development</h3>
+              <h3>Graphic design</h3>
               <p>
-                In my latest web development project, I created Flavorly Food, a
-                modern and user-friendly website for a food brand. The site
-                features a clean, attractive design, smooth animations, and a
-                fully responsive layout that looks great on all devices.
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque
+                ipsum animi iusto. Quis non maiores dolorem error pariatur
+                ducimus provident vero, iste eum iusto enim laudantium, sint
+                ipsam illo modi.
               </p>
-              <a href="http://flavourlyfoods.atwebpages.com/"
-                ><i class="bx bx-link-external"></i
-              ></a>
+              <a href="#"><i class="bx bx-link-external"></i></a>
             </div>
           </div>
 
@@ -396,7 +391,7 @@
                 development and UI design.
               </p>
               <a
-                href="https://expo.dev/accounts/prabhashiani22/projects/StyleApp/builds/1cea2a17-7897-44f3-a8b8-1b85446a149f"
+                href="https://expo.dev/artifacts/eas/ooqWJGvntfKWrwk3kjHWRp.apk"
                 ><i class="bx bx-link-external"></i
               ></a>
             </div>
@@ -434,7 +429,10 @@
                 creativity, user empathy, and technical skills, I craft designs
                 that not only look stunning but also solve real problems.
               </p>
-              <a href="#"><i class="bx bx-link-external"></i></a>
+              <a
+                href="https://www.figma.com/proto/jhSeMELtVMqko1GPSPIpmJ/FOODGO?node-id=67-7&p=f&t=Ic4opQ2ZigX4tggE-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=37%3A574"
+                ><i class="bx bx-link-external"></i
+              ></a>
             </div>
           </div>
 
@@ -443,13 +441,17 @@
               <img src="img/unsplash_LJ9KY8pIH3E.png" alt="" />
             </div>
             <div class="port-content">
-              <h3>Graphic Design</h3>
+              <h3>Game Development</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa
-                commodi iusto ullam porro tenetur itaque maxime voluptas
-                voluptates explicabo adipisci.
+                A JavaScript and Canvas-based Pacman game with smooth
+                animations, ghost AI, collision detection, and sound effects.The
+                game includes scoring, lives, and level progression, providing a
+                fun and interactive experience that highlights my skills in
+                frontend development and game logic.
               </p>
-              <a href="#"><i class="bx bx-link-external"></i></a>
+              <a href="https://udeshika123-cyber.github.io/PACMAN-Game/"
+                ><i class="bx bx-link-external"></i
+              ></a>
             </div>
           </div>
 
@@ -458,13 +460,16 @@
               <img src="img/unsplash_SrewPUfo2c0.png" alt="" />
             </div>
             <div class="port-content">
-              <h3>Graphic Design</h3>
+              <h3>Web Development</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa
-                commodi iusto ullam porro tenetur itaque maxime voluptas
-                voluptates explicabo adipisci.
+                In my latest web development project, I created Flavorly Food, a
+                modern and user-friendly website for a food brand. The site
+                features a clean, attractive design, smooth animations, and a
+                fully responsive layout that looks great on all devices.
               </p>
-              <a href="#"><i class="bx bx-link-external"></i></a>
+              <a href="http://flavourlyfoods.atwebpages.com/"
+                ><i class="bx bx-link-external"></i
+              ></a>
             </div>
           </div>
         </div>
