--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
           Developer passionate about turning ideas into beautiful, user-friendly
           digital experiences. I blend design and code to create modern,
           responsive websites and impactful visuals. Let’s build something
-          amazing together!
+          amazing together !
         </p>
         <div class="info-box">
           <div class="email-info">
             <h5>Email :</h5>
-            <span>udeshikaprabhashini21@gmail.com</span>
+            <a href="#"><span>udeshikaprabhashini21@gmail.com</span></a>
           </div>
         </div>
         <div class="btn-box">
@@ -158,9 +158,43 @@
     <section id="about" class="about">
       <div class="img-about scroll-scale">
         <img src="img/myImage11.png" alt="" />
+        <div class="liquid-shape">
+          <svg
+            viewBox="0 0 500 500"
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            width="100%"
+            id="blobSvg"
+          >
+            <path fill="#12f7ff">
+              <animate
+                attributeName="d"
+                dur=" 20000ms"
+                repeatCount="indefinite"
+                values="
+                M406,294.5Q339,339,294.5,365.5Q250,392,174,397Q98,402,77.5,326Q57,250,78.5,175Q100,100,175,99Q250,98,327,97Q404,96,438.5,173Q473,250,406,294.5Z;
+                      
+                M402.5,318Q386,386,318,401.5Q250,417,201,382.5Q152,348,104.5,299Q57,250,67.5,164Q78,78,164,77.5Q250,77,328.5,85Q407,93,413,171.5Q419,250,402.5,318Z;
+  
+                M402.5,318Q386,386,318,401.5Q250,417,201,382.5Q152,348,104.5,299Q57,250,67.5,164Q78,78,164,77.5Q250,77,328.5,85Q407,93,413,171.5Q419,250,402.5,318Z;
+  
+                M411.5,300Q350,350,300,419Q250,488,199,420Q148,352,79.5,301Q11,250,58.5,178Q106,106,178,92.5Q250,79,328.5,86Q407,93,440,171.5Q473,250,411.5,300Z;
+  
+                M416,335Q420,420,335,456Q250,492,193,428Q136,364,125,307Q114,250,111.5,179.5Q109,109,179.5,108.5Q250,108,304.5,124.5Q359,141,385.5,195.5Q412,250,416,335Z;
+  
+                M398.5,300Q350,350,300,414.5Q250,479,187.5,427Q125,375,96.5,312.5Q68,250,112,203Q156,156,203,92.5Q250,29,311,78.5Q372,128,409.5,189Q447,250,398.5,300Z;
+  
+                M389.5,311.5Q373,373,311.5,401.5Q250,430,175,415Q100,400,56.5,325Q13,250,79,197.5Q145,145,197.5,118Q250,91,305.5,115Q361,139,383.5,194.5Q406,250,389.5,311.5Z;
+  
+                M392,327Q404,404,327,433Q250,462,179,427Q108,392,96,321Q84,250,118.5,201.5Q153,153,201.5,137.5Q250,122,318.5,117.5Q387,113,383.5,181.5Q380,250,392,327Z;
+                      "
+              ></animate>
+            </path>
+          </svg>
+        </div>
         <div class="info-about1">
           <span>1+</span>
-          <p>Years experinces</p>
+          <p>Years experiences</p>
         </div>
         <div class="info-about2">
           <span>20+</span>
@@ -368,12 +402,16 @@
             <div class="port-content">
               <h3>Graphic design</h3>
               <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eaque
-                ipsum animi iusto. Quis non maiores dolorem error pariatur
-                ducimus provident vero, iste eum iusto enim laudantium, sint
-                ipsam illo modi.
+                This project is a creative design piece developed using Adobe
+                Photoshop, showcasing my skills in visual composition, color
+                theory, and layout design. The objective was to craft a visually
+                compelling and balanced graphic, suitable for use in digital
+                advertising, promotional material, or editorial layout.
               </p>
-              <a href="#"><i class="bx bx-link-external"></i></a>
+              <a
+                href="https://drive.google.com/drive/folders/1XRQ6lFkRPB1sLxu7s7oOr7PIeXWv57yD?usp=drive_link"
+                ><i class="bx bx-link-external"></i
+              ></a>
             </div>
           </div>
 
